--- a/.github/workflows/codeql-analysis-extended.yml
+++ b/.github/workflows/codeql-analysis-extended.yml
@@ -64,9 +64,9 @@ jobs:
     #    uses a compiled language
 
     - run: |
-    #   make bootstrap
-    #   make release
-        mvnw clean install
+       make bootstrap
+       make release
+       
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
