--- a/.github/workflows/codeql-analysis-extended.yml
+++ b/.github/workflows/codeql-analysis-extended.yml
@@ -64,8 +64,9 @@ jobs:
     #    uses a compiled language
 
     - run: |
-       make bootstrap
-       make release
+    #   make bootstrap
+    #   make release
+        mvn clean install 
        
 
     - name: Perform CodeQL Analysis
