--- a/.github/workflows/codeql-analysis-extended.yml
+++ b/.github/workflows/codeql-analysis-extended.yml
@@ -53,8 +53,8 @@ jobs:
         
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
-    #- name: Autobuild
-    #  uses: github/codeql-action/autobuild@v1
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v1
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
@@ -66,7 +66,7 @@ jobs:
     - run: |
     #   make bootstrap
     #   make release
-        mvn clean install 
+    #    mvn clean install 
        
 
     - name: Perform CodeQL Analysis
